# CLI-toolkit

./: CMakeLists.txt  README.md  Tests.txt  Tests_copy.txt
include/commands/: commands.hpp  find_duplicates.cpp  find_word.cpp  make_copy.cpp  make_copy.hpp  stats.cpp
include/utils/: file_utils.cpp  file_utils.hpp
src/: main  main.cpp
